# svitla-dataroom

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  task.md
backend/: .env.example  Dockerfile  config.py  database.py  logger.py  main.py  models.py  nixpacks.toml  pyproject.toml  validators.py
backend/routers/: auth.py  files.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_files.py  test_validators.py
frontend/: .env.example  Dockerfile  index.html  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx
frontend/src/components/: DrivePicker.tsx  FileList.tsx  FileSection.tsx  Header.tsx
frontend/src/config/: constants.ts
frontend/src/data/: mockFiles.ts
frontend/src/hooks/: useAuth.ts  useFiles.ts
frontend/src/services/: api.ts
frontend/src/types/: file.ts
